<resources>
    <string name="app_name">Sutexian</string>
    <string name="str_sutex">Sutex College Of Bca</string>
    <string name="get_started">Get Started !</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="code">No</string>
    <string name="college">College</string>
    <string name="birthdate">Birthdate</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an new account</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="user_name">User Name</string>
    <string name="user_designation">User Designation</string>
    <string name="user_phone">User Phone</string>
    <string name="user_email">User Email</string>
    <string name="user_information">User Information</string>
    <string name="back">Back</string>
    <string name="signin_with_phone">SignIn With Phone</string>
    <string name="sign_in_with_email">Sign In with Email</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="otp">Otp</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="userphone">UserPhone</string>
    <string name="num_format">+91 1234567890</string>
    <string name="student_name">FName :</string>
    <string name="student_email">Email :</string>
    <string name="student_phone">Phone :</string>
    <string name="student_bdate">Bdate :</string>
    <string name="student_clg">Clg :</string>
    <string name="student_surname">SName :</string>
    <string name="student_information">Student Information</string>
    <string name="stud_name">Stud Name :</string>
    <string name="std_name">Student Name</string>
    <string name="std_phone">Student Phone</string>
    <string name="stud_phone">Stud Phone :</string>
    <string name="stud_email">Stud Email :</string>
    <string name="std_email">Student Email</string>
    <string name="std_bdate">Student Bdate</string>
    <string name="stud_bdate">Stud Bdate :</string>
    <string name="stud_college">Stud College :</string>
    <string name="std_college">Student College</string>
    <string name="update_data">Update Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="crash_button">Crash Button</string>
    <string name="here">, here</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
</resources>