<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_llc"
    android:backgroundTint="@color/md_theme_dark_inversePrimary"
    android:layout_margin="12dp"
    android:gravity="center">

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:orientation="horizontal"
        android:layout_marginStart="22dp"
        android:paddingStart="22dp"
        android:paddingEnd="0dp"
        android:layout_marginEnd="22dp"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/student_name"
            android:gravity=""
            android:textSize="15sp"
            android:textColor="@color/md_theme_light_background"
            android:fontFamily="@font/b612"/>

        <TextView
            android:id="@+id/StudFname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:fontFamily="@font/b612"
            android:hint="@string/first_name"
            android:textColor="@color/md_theme_light_background"
            android:textColorHint="@color/md_theme_light_background"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:orientation="horizontal"
        android:layout_marginStart="22dp"
        android:paddingStart="22dp"
        android:paddingEnd="0dp"
        android:layout_marginEnd="22dp"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/student_surname"
            android:gravity=""
            android:textSize="15sp"
            android:textColor="@color/md_theme_light_background"
            android:fontFamily="@font/b612"/>

        <TextView
            android:id="@+id/StudLname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/last_name"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            android:textColor="@color/md_theme_light_background"
            android:fontFamily="@font/b612"
            android:textColorHint="@color/md_theme_light_background"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:orientation="horizontal"
        android:paddingStart="22dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/student_email"
            android:gravity=""
            android:textSize="15sp"
            android:textColor="@color/md_theme_light_background"
            android:fontFamily="@font/b612"/>
        <TextView
            android:id="@+id/StudEmail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            android:textColor="@color/md_theme_light_background"
            android:fontFamily="@font/b612"
            android:textColorHint="@color/md_theme_light_background"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:orientation="horizontal"
        android:paddingStart="22dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/student_phone"
            android:gravity=""
            android:textSize="15sp"
            android:textColor="@color/md_theme_light_background"
            android:fontFamily="@font/b612"/>
        <TextView
            android:id="@+id/StudPhoneNo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/phone_no"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/md_theme_light_background"
            android:fontFamily="@font/b612"
            android:textColorHint="@color/md_theme_light_background"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:orientation="horizontal"
        android:paddingStart="22dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/student_bdate"
            android:gravity=""
            android:textSize="15sp"
            android:textColor="@color/md_theme_light_background"
            android:fontFamily="@font/b612"/>
        <TextView
            android:id="@+id/StudBirthdate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/birthdate"
            android:textSize="15sp"
            android:layout_marginStart="13dp"
            android:textColor="@color/md_theme_light_background"
            android:fontFamily="@font/b612"
            android:textColorHint="@color/md_theme_light_background"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:orientation="horizontal"
        android:paddingStart="22dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/student_clg"
            android:gravity=""
            android:textSize="15sp"
            android:textColor="@color/md_theme_light_background"
            android:fontFamily="@font/b612"/>
        <TextView
            android:id="@+id/StudCollege"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/college"
            android:textSize="15sp"
            android:layout_marginStart="29dp"
            android:textColor="@color/md_theme_light_background"
            android:fontFamily="@font/b612"
            android:textColorHint="@color/md_theme_light_background"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"/>
</LinearLayout>