<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ShowFullUserDetail">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_information"
        android:gravity="center"
        android:layout_margin="22dp"
        android:textSize="27sp"
        android:textColor="@color/md_theme_light_primary"
        android:fontFamily="@font/b612"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/Ll1"
        android:layout_below="@id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_llc"
        android:backgroundTint="@color/md_theme_dark_onErrorContainer"
        android:padding="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:elevation="2dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stud_name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/md_theme_light_outline"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/StudName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/std_name"
            android:textSize="15sp"
            android:textColor="@color/md_theme_light_outline"
            android:layout_marginStart="7dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Ll2"
        android:layout_below="@id/Ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_llc"
        android:backgroundTint="@color/md_theme_dark_onErrorContainer"
        android:padding="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:elevation="2dp"
        android:layout_marginTop="12dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stud_email"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/md_theme_light_outline"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/StudEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/std_email"
            android:textSize="15sp"
            android:textColor="@color/md_theme_light_outline"
            android:layout_marginStart="7dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Ll3"
        android:layout_below="@id/Ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_llc"
        android:backgroundTint="@color/md_theme_dark_onErrorContainer"
        android:padding="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:elevation="2dp"
        android:layout_marginTop="12dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stud_phone"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/md_theme_light_outline"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/StudPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/std_phone"
            android:textSize="15sp"
            android:textColor="@color/md_theme_light_outline"
            android:layout_marginStart="7dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Ll4"
        android:layout_below="@id/Ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_llc"
        android:backgroundTint="@color/md_theme_dark_onErrorContainer"
        android:padding="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:elevation="2dp"
        android:layout_marginTop="12dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stud_bdate"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/md_theme_light_outline"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/StudBdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/std_bdate"
            android:textSize="15sp"
            android:textColor="@color/md_theme_light_outline"
            android:layout_marginStart="7dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Ll5"
        android:layout_below="@id/Ll4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_llc"
        android:backgroundTint="@color/md_theme_dark_onErrorContainer"
        android:padding="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:elevation="2dp"
        android:layout_marginTop="12dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stud_college"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/md_theme_light_outline"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/StudClg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/std_college"
            android:textSize="15sp"
            android:textColor="@color/md_theme_light_outline"
            android:layout_marginStart="7dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Ll5"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="32dp"
        android:gravity="center">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/UpdateData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="12dp"
            android:text="@string/update_data"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="22dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/DeleteData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="12dp"
            android:text="@string/delete_data"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="0dp"/>
    </LinearLayout>
</RelativeLayout>