<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="32sp"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="17dp"
            android:textColor="@color/md_theme_light_primary"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/UserImage"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/add_user"
            android:layout_gravity="center"
            android:layout_margin="12dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:layout_marginTop="8dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="3dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UserEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_no"
            android:layout_marginTop="3dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UserPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="5dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UserPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:layout_marginTop="5dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UserConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SignUp"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/sign_up"
            android:textSize="17sp"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/md_theme_light_background"
            android:layout_marginStart="72dp"
            android:layout_marginEnd="72dp"
            android:layout_marginTop="22dp"
            app:cornerRadius="19dp"
            app:rippleColor="@color/ic_launcher_background"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/AlreadyHaveAnAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/already_have_an_account"
            android:textStyle="normal"
            android:textSize="17sp"
            android:layout_margin="17dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/md_theme_dark_inverseOnSurface"/>
    </LinearLayout>
</ScrollView>