<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.OtpLogin"
    android:background="@color/md_theme_light_primary">

    <LinearLayout
        android:id="@+id/Llc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_otp_login0"
        android:gravity="center">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="42sp"
            android:fontFamily="@font/b612"
            android:textStyle="bold"
            android:gravity="center"
           android:layout_margin="72dp"
            android:textColor="@color/md_theme_light_primary"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Llc2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Llc1"
        android:orientation="horizontal"
        android:background="@color/md_theme_light_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/bg_otp_login">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_llc"
                android:layout_marginTop="22dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_no"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="32dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/PhoneNo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/NextToVerifyPhone"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="22dp"
                    android:src="@drawable/ic_next"
                    android:background="@drawable/bg_llc"
                    android:backgroundTint="@color/md_theme_light_primary"
                    android:padding="12dp"
                    android:layout_margin="22dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/SignInWithEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_with_email"
                    android:textStyle="bold"
                    android:fontFamily="@font/b612"
                    android:textColor="@color/md_theme_light_primary"
                    android:textSize="17sp"
                    android:layout_marginBottom="17dp"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>